remove navbar brand negative margin, align left and fix bg of mobile menu

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -13,9 +13,9 @@ p {
   margin-left: 1rem;
 }
 
-.drop-box-shadow {
-  box-shadow: none;
- }
+.container {
+  padding: 0 1rem;
+}
 
 .fira {
   font-family: "Fira Sans";
@@ -48,6 +48,11 @@ p {
 .hero-body {
   padding: 3rem 0;
 }
+
+.mobile-links {
+  background-color: transparent;
+  box-shadow: none;
+ }
 
 .navbar {
   background-color: transparent;
